--- a/part4/package.json
+++ b/part4/package.json
@@ -4,24 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Samuli Saarinen",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "jest": "^26.4.2",
-    "lodash": "^4.17.20"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "lodash": "^4.17.20",
+    "supertest": "^4.0.2"
   }
 }
