--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.3",
     "axios": "^0.20.0",
     "eslint-plugin-jest": "^24.0.1",
@@ -38,6 +36,8 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "@babel/eslint-parser": "^7.11.5",
-    "@babel/eslint-plugin": "^7.11.5"
+    "@babel/eslint-plugin": "^7.11.5",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4"
   }
 }
