--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -16,7 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+	"cypress:open": "cypress open",
+	"cypress:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +40,8 @@
     "@babel/eslint-parser": "^7.11.5",
     "@babel/eslint-plugin": "^7.11.5",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4"
+    "@testing-library/react": "^11.0.4",
+    "cypress": "^5.2.0",
+    "eslint-plugin-cypress": "^2.11.1"
   }
 }
