--- a/part7/bloglist/frontend/package.json
+++ b/part7/bloglist/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/user-event": "^12.1.3",
     "axios": "^0.20.0",
     "eslint-plugin-jest": "^24.0.1",
